--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -60,7 +60,7 @@
                   <li class="nav-header">Sidebar</li>
                     <li><%= link_to "Link1", "/path1"  %></li>
                     <li><%= link_to "Link2", "/path2"  %></li>
-                    <li><%= link_to "Link3", "/path3"  %></li>
+                    <li><%= link_to "Special", special_path, :class => "big", :id => "X"  %></li>
                 </ul>
               </div>
             </div>
