--- a/app/views/prizes/_form.html.erb
+++ b/app/views/prizes/_form.html.erb
@@ -16,8 +16,8 @@
     <%= f.text_field :name %>
   </div>
   <div class="field">
-    <%= f.label :image %><br />
-    <%= f.text_field :image %>
+    <%= f.label :image_upload, "Image" %><br />
+    <%= f.file_field :image_upload %>
   </div>
   <div class="field">
     <%= f.label :description %><br />
