Add a title on first page

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,3 +1,5 @@
+<h1>Register to win a prize on April 17th at Montreal.rb</h1>
+
 <%= form_for @member do |f| %>
   <%= f.label :name %>
   <%= f.text_field :name %>
