--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -34,7 +34,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </a>
-          <a class="brand" href="#">MontrealrbContest</a>
+          <a class="brand" href="#">Montreal.rb</a>
           <div class="container nav-collapse">
             <ul class="nav">
                 <li><%= link_to "Link1", "/path1"  %></li>
@@ -60,7 +60,8 @@
                   <li class="nav-header">Sidebar</li>
                     <li><%= link_to "Contestants", members_path  %></li>
                     <li><%= link_to "Prizes", prizes_path  %></li>
-                    <li><%= link_to "Special", special_path, :class => "big", :id => "X"  %></li>
+                    <li><%= link_to "Special", special_path, :class => "big", :id => "X" %></li>
+                    <li><%= link_to "News", news_path %></li>
                 </ul>
               </div>
             </div>
