Require login to create prizes

--- a/app/views/prizes/index.html.erb
+++ b/app/views/prizes/index.html.erb
@@ -20,4 +20,6 @@
 
 <br />
 
-<%= link_to 'New Prize', new_prize_path %>
+<% if user_signed_in? %>
+  <%= link_to 'New Prize', new_prize_path %>
+<% end %>
