--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -2,7 +2,7 @@
 %html{lang: "en"}
   %head
     %meta{charset: "utf-8"}
-    %title Montreal.rb Contest
+    %title Montreal.rb Contest (haml)
     = csrf_meta_tags
 
     / Le HTML5 shim, for IE6-8 support of HTML elements
@@ -30,11 +30,9 @@
           %a.brand{href: root_path} Montreal.rb
           .container.nav-collapse
             %ul.nav
-              %li= link_to "Contestants", members_path
-              %li= link_to "Prizes", prizes_path
-              %li= link_to "Special", special_path, :class => "big", :id => "X"
-              %li= link_to "News", news_path
-
+              %li{class: "#{"current" if @template_handler == :erb}"}=  link_to "Erb",  url_for(:subdomain => "erb",  :only_path => false)
+              %li{class: "#{"current" if @template_handler == :haml}"}= link_to "Haml", url_for(:subdomain => "haml", :only_path => false)
+              %li.big.X{class: "#{"current" if @template_handler == :slim}"}= link_to "Slim", url_for(:subdomain => "slim", :only_path => false)
     .container
       .content
         .row
