Fix layout in PrizesController#index

--- a/app/assets/stylesheets/prizes.css.sass
+++ b/app/assets/stylesheets/prizes.css.sass
@@ -4,10 +4,13 @@
     padding: 15px 0
     border-bottom: 1px #777 solid
     overflow: hidden
-    img
+    .image
       float: left
+      min-height: 75px
       padding: 0 10px
       border-right: 1px #ccc solid
+    img
+      width: 55px
     .title
       .name
         padding-left: 10px
@@ -17,4 +20,4 @@
         font-size: 80%
         color: #aaa
     .description
-      padding-left: 10px
+      padding: 10px 0 0 85px
