Protect Member + add admin delete

--- a/app/views/members/show.html.erb
+++ b/app/views/members/show.html.erb
@@ -6,3 +6,4 @@
 </p>
 
 <%= link_to 'Back', members_path %>
+<%= link_to 'Delete', member_path(@member), :confirm => 'Are you sure?', :method => :delete %>
